fix: wrapped tag ul in li

--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,10 @@ header {
     list-style: none;
   }
 
+  .wrapper {
+    list-style-type: none;
+  }
+
   .nav-link {
     color: #000000;
     padding: 20px 20px;
